USEID-608: Ensure accessibility of the widget (#133)
* USEID-608: Add alt tag for all images

* USEID-608: Add aria labels for links

* USEID-608: Add alt tag for incompatible image

* USEID-608: Change h3 to p for consistent headlines

* USEID-608: Add name to generated iframe

* USEID-608: Make page title more descriptive

* USEID-608: Fix test properties

* NO-TICKET: Hide overflow x

To prevent vertical scrollbar in some edge cases

* USEID-608: Cleanup localization properties

--- a/src/main/resources/static/css/widget.css
+++ b/src/main/resources/static/css/widget.css
@@ -4,6 +4,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     padding: 0;
+    overflow-x: hidden;
 }
 img.icon-list {
     align-self: start;
